--- a/Lab-10/review.ipynb
+++ b/Lab-10/review.ipynb
@@ -204,86 +204,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C-4.5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outlook_Overcast (entropy = 0.9402859586706311) (samples = 14)\n",
-      "Left\n",
-      " Leaf node, Class Distrubution:[0 4]\n",
-      "Right\n",
-      " Humidity (entropy = 1.0) (samples = 10)\n",
-      " Left\n",
-      "  Outlook_Rain (entropy = 0.8112781244591328) (samples = 4)\n",
-      "  Left\n",
-      "   Leaf node, Class Distrubution:[0 1]\n",
-      "  Right\n",
-      "   Leaf node, Class Distrubution:[3 0]\n",
-      " Right\n",
-      "  Wind (entropy = 0.9182958340544896) (samples = 6)\n",
-      "  Left\n",
-      "   Temp (entropy = 0.9182958340544896) (samples = 3)\n",
-      "   Left\n",
-      "    Leaf node, Class Distrubution:[0 1]\n",
-      "   Right\n",
-      "    Leaf node, Class Distrubution:[2 0]\n",
-      "  Right\n",
-      "   Leaf node, Class Distrubution:[0 3]\n",
-      "Predicted class for input [1, 0, 1, 0, 1, 0]: 1\n"
+      "Outlook_Overcast (entropy=0.9402859586706311) (sample=14)\n",
+      "Left:\n",
+      " Leaf node, class distrubution:[0 4]\n",
+      "Right:\n",
+      " Humidity (entropy=1.0) (sample=10)\n",
+      " Left:\n",
+      "  Outlook_Rain (entropy=0.8112781244591328) (sample=4)\n",
+      "  Left:\n",
+      "   Leaf node, class distrubution:[0 1]\n",
+      "  Right:\n",
+      "   Leaf node, class distrubution:[3 0]\n",
+      " Right:\n",
+      "  Wind (entropy=0.9182958340544896) (sample=6)\n",
+      "  Left:\n",
+      "   Temp (entropy=0.9182958340544896) (sample=3)\n",
+      "   Left:\n",
+      "    Leaf node, class distrubution:[0 1]\n",
+      "   Right:\n",
+      "    Leaf node, class distrubution:[2 0]\n",
+      "  Right:\n",
+      "   Leaf node, class distrubution:[0 3]\n",
+      "Predicted class for [1, 0, 1, 0, 1, 0]:1\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd \n",
+    "import numpy as np\n",
     "df = pd.read_csv('data.csv')\n",
-    "df['Wind'] = df['Wind'].map({'Weak':0,'Strong':1})\n",
     "df['Decision'] = df['Decision'].map({'No':0,'Yes':1})\n",
+    "df['Wind'] =  df['Wind'].map({'Weak':0,'Strong':1})\n",
     "df = pd.get_dummies(df,columns=['Outlook'])\n",
     "\n",
+    "def convertHum(val):\n",
+    "    if val > df['Humidity'].mean():\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0 \n",
+    "\n",
     "def convertTemp(val):\n",
-    "    if val >= df['Temp'].mean():\n",
+    "    if val > df['Temp'].mean():\n",
     "        return 1\n",
     "    else:\n",
-    "        return 0\n",
+    "        return 0 \n",
     "\n",
-    "def convertHumidity(val):\n",
-    "    if val >= df['Humidity'].mean():\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
-    "\n",
+    "df['Humidity'] = df['Humidity'].apply(convertHum)\n",
     "df['Temp'] = df['Temp'].apply(convertTemp)\n",
-    "df['Humidity'] = df['Humidity'].apply(convertHumidity)\n",
-    "df['Outlook_Overcast'] = df['Outlook_Overcast'].map({False:0,True:1})\n",
-    "df['Outlook_Rain'] = df['Outlook_Rain'].map({False:0,True:1})\n",
-    "df['Outlook_Sunny'] = df['Outlook_Sunny'].map({False:0,True:1})\n",
     "x = df.drop('Decision',axis=1).values\n",
     "y = df['Decision'].values\n",
     "\n",
     "class TreeNode:\n",
-    "    def __init__(self,entropy=None,feature=None,sample=None,left=None,right=None,value=None):\n",
-    "        self.entropy = entropy \n",
-    "        self.feature = feature \n",
-    "        self.sample = sample\n",
-    "        self.left = left \n",
-    "        self.right = right \n",
-    "        self.value = value\n",
-    "    \n",
-    "    def is_leaf(self):\n",
-    "        return self.left is None and self.right is None \n",
+    "  def __init__(self,entropy=None,feature=None,value=None,sample=None,left=None,right=None):\n",
+    "    self.entropy = entropy\n",
+    "    self.left = left\n",
+    "    self.right = right \n",
+    "    self.value = value \n",
+    "    self.sample = sample \n",
+    "    self.feature = feature\n",
+    "\n",
+    "  def is_leaf(self):\n",
+    "    return self.right is None and self.left is None\n",
     "\n",
     "def compute_entropy(y):\n",
-    "    entropy = 0\n",
+    "  entropy = 0\n",
+    "  if len(y) > 0:\n",
+    "    p1 = len(y[y==1])/len(y)\n",
+    "    if p1 not in (0,1):\n",
+    "      entropy = -p1*np.log2(p1) -(1-p1)*np.log2(1-p1)\n",
+    "  return entropy \n",
+    "\n",
+    "def split_dataset(x,node_indices,feature):\n",
+    "  left_indices,right_indices = [],[]\n",
+    "  for i in node_indices:\n",
+    "    if x[i][feature] == 1:\n",
+    "      left_indices.append(i)\n",
+    "    else:\n",
+    "      right_indices.append(i)\n",
+    "  return left_indices,right_indices\n",
+    "\n",
+    "def compute_gain_ratio(x,y,node_indices,feature):\n",
+    "  left_indices,right_indices = split_dataset(x,node_indices,feature)\n",
+    "  x_node,y_node = x[node_indices],y[node_indices]\n",
+    "  x_left,y_left = x[left_indices],y[left_indices]\n",
+    "  x_right,y_right = x[right_indices],y[right_indices]\n",
+    "  w_left = len(x_left)/len(x)\n",
+    "  w_right = len(x_right)/len(x)\n",
+    "  node_entropy = compute_entropy(y_node)\n",
+    "  left_entropy = compute_entropy(y_left)\n",
+    "  right_entropy = compute_entropy(y_right)\n",
+    "  weighted_entropy = w_left*left_entropy + w_right*right_entropy \n",
+    "  info_gain =  node_entropy - weighted_entropy \n",
+    "  split_info = 0\n",
+    "  for indices in (left_indices, right_indices):\n",
+    "    proportion = len(indices) / len(x_node)\n",
+    "    if proportion > 0:\n",
+    "      split_info -= proportion * np.log2(proportion)\n",
+    "  gain_ratio = info_gain / split_info if split_info != 0 else 0\n",
+    "  return gain_ratio\n",
+    "\n",
+    "def get_best_split(x,y,node_indices):\n",
+    "  best_feature = None\n",
+    "  max_gain_ratio = -np.inf\n",
+    "  num_features = x.shape[1]\n",
+    "  for feature in range(num_features):\n",
+    "    gain_ratio = compute_gain_ratio(x,y,node_indices,feature)\n",
+    "    if gain_ratio > max_gain_ratio:\n",
+    "      max_gain_ratio = gain_ratio\n",
+    "      best_feature = feature\n",
+    "  return best_feature\n",
+    "\n",
+    "def build_tree(x,y,node_indices,current_depth,max_depth):\n",
+    "  entropy =  compute_entropy(y[node_indices])\n",
+    "  values = np.bincount(y[node_indices],minlength=2)\n",
+    "  node = TreeNode(entropy=entropy,value=values,sample=len(node_indices))\n",
+    "  if current_depth == max_depth or entropy == 0 or len(np.unique(y[node_indices])) == 1:\n",
+    "    return node\n",
+    "  best_feature = get_best_split(x,y,node_indices)\n",
+    "  if best_feature is None:\n",
+    "    return node \n",
+    "  node.feature = best_feature\n",
+    "  left_indices,right_indices = split_dataset(x,node_indices,best_feature)\n",
+    "  if left_indices:\n",
+    "    node.left = build_tree(x,y,left_indices,current_depth+1,max_depth)\n",
+    "  if right_indices:\n",
+    "    node.right = build_tree(x,y,right_indices,current_depth+1,max_depth)\n",
+    "  return node\n",
+    "\n",
+    "def print_tree(node,feature_names=None,depth=0):\n",
+    "  if feature_names is not None and node.feature is not None:\n",
+    "    feature_name = feature_names[node.feature]\n",
+    "  else:\n",
+    "    feature_name = f'Feature {node.feature}'\n",
+    "  if node.is_leaf():\n",
+    "    print(f\"{' '*depth}Leaf node, class distrubution:{node.value}\")\n",
+    "  else:\n",
+    "    print(f\"{' '*depth}{feature_name} (entropy={node.entropy}) (sample={node.sample})\")\n",
+    "  if node.left is not None:\n",
+    "    print(f\"{' '*depth}Left:\")\n",
+    "    print_tree(node.left,feature_names=feature_names,depth=depth+1)\n",
+    "  if node.right is not None:\n",
+    "    print(f\"{' '*depth}Right:\")\n",
+    "    print_tree(node.right,feature_names=feature_names,depth=depth+1)\n",
+    "\n",
+    "def predict(node,sample):\n",
+    "  while not node.is_leaf():\n",
+    "    feature_index = node.feature\n",
+    "    if sample[feature_index] == 1:\n",
+    "      node = node.right\n",
+    "    else:\n",
+    "      node = node.left\n",
+    "  return np.argmax(node.value)\n",
+    "\n",
+    "root = build_tree(x,y,list(range(len(y))),0,6)\n",
+    "feature_names = df.drop('Decision',axis=1).columns.to_list()\n",
+    "print_tree(root,feature_names=feature_names,depth=0)\n",
+    "sample_input = [1,0,1,0,1,0]\n",
+    "y_pred = predict(root,sample_input)\n",
+    "print(f\"Predicted class for {sample_input}:{y_pred}\")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CART"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outlook_Overcast (gini = 0.459) (samples = 14)\n",
+      "Left:\n",
+      " Leaf node Class Distrubution:[0 4]\n",
+      "Right:\n",
+      " Humidity (gini = 0.500) (samples = 10)\n",
+      " Left:\n",
+      "  Outlook_Rain (gini = 0.375) (samples = 4)\n",
+      "  Left:\n",
+      "   Leaf node Class Distrubution:[0 1]\n",
+      "  Right:\n",
+      "   Leaf node Class Distrubution:[3 0]\n",
+      " Right:\n",
+      "  Wind (gini = 0.444) (samples = 6)\n",
+      "  Left:\n",
+      "   Temp (gini = 0.444) (samples = 3)\n",
+      "   Left:\n",
+      "    Leaf node Class Distrubution:[0 1]\n",
+      "   Right:\n",
+      "    Leaf node Class Distrubution:[2 0]\n",
+      "  Right:\n",
+      "   Leaf node Class Distrubution:[0 3]\n",
+      "The predict class for sample input [0, 1, 0, 0, 1, 0, 1, 0]:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "df = pd.read_csv('data.csv')\n",
+    "df['Decision'] = df['Decision'].map({'No':0,'Yes':1})\n",
+    "df['Wind'] =  df['Wind'].map({'Weak':0,'Strong':1})\n",
+    "df = pd.get_dummies(df,columns=['Outlook'])\n",
+    "\n",
+    "def convertHum(val):\n",
+    "    if val > df['Humidity'].mean():\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0 \n",
+    "\n",
+    "def convertTemp(val):\n",
+    "    if val > df['Temp'].mean():\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0 \n",
+    "\n",
+    "df['Humidity'] = df['Humidity'].apply(convertHum)\n",
+    "df['Temp'] = df['Temp'].apply(convertTemp)\n",
+    "x = df.drop('Decision',axis=1).values\n",
+    "y = df['Decision'].values\n",
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self,gini=None,feature=None,value=None,samples=None,left=None,right=None):\n",
+    "        self.gini = gini\n",
+    "        self.feature = feature\n",
+    "        self.value = value \n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "        self.samples = samples \n",
+    "    \n",
+    "    def is_leaf(self):\n",
+    "        return self.left is None and self.right is None\n",
+    "\n",
+    "def compute_gini(y):\n",
+    "    gini = 0\n",
     "    if len(y) > 0:\n",
     "        p1 = len(y[y == 1])/len(y)\n",
-    "        if p1 not in (0,1):\n",
-    "            entropy = -p1*np.log2(p1) - (1-p1)*np.log2(1-p1)\n",
-    "    return entropy \n",
+    "        gini = 1 - (p1**2 + (1-p1)**2)\n",
+    "    return gini \n",
     "\n",
     "def split_dataset(x,node_indices,feature):\n",
     "    left_indices,right_indices = [],[]\n",
@@ -294,47 +473,46 @@
     "            right_indices.append(i)\n",
     "    return left_indices,right_indices\n",
     "\n",
-    "def compute_information_gain(x,y,node_indices,feature):\n",
+    "def compute_gini_gain(x,y,node_indices,feature):\n",
     "    left_indices,right_indices = split_dataset(x,node_indices,feature)\n",
     "    x_node,y_node = x[node_indices],y[node_indices]\n",
     "    x_left,y_left = x[left_indices],y[left_indices]\n",
     "    x_right,y_right = x[right_indices],y[right_indices]\n",
-    "    node_entropy = compute_entropy(y_node)\n",
-    "    left_entropy = compute_entropy(y_left)\n",
-    "    right_entropy = compute_entropy(y_right)\n",
-    "    w_left = len(x_left)/len(x)\n",
-    "    w_right = len(x_right)/len(x)\n",
-    "    weighted_entropy = w_left*left_entropy + w_right*right_entropy\n",
-    "    information_gain = node_entropy - weighted_entropy\n",
-    "    return information_gain\n",
+    "    w_left,w_right = len(left_indices)/len(node_indices),len(right_indices)/len(node_indices)\n",
+    "    node_gini = compute_gini(y_node)\n",
+    "    left_gini = compute_gini(y_left)\n",
+    "    right_gini = compute_gini(y_right)\n",
+    "    weighted_gini = w_left*left_gini + w_right*right_gini\n",
+    "    gini_gain = node_gini - weighted_gini\n",
+    "    return gini_gain\n",
     "\n",
     "def get_best_split(x,y,node_indices):\n",
     "    num_features = x.shape[1]\n",
-    "    best_feature = None\n",
-    "    max_info_gain = -np.inf\n",
+    "    max_gini_gain = -np.inf\n",
+    "    best_feature = None \n",
     "    for feature in range(num_features):\n",
-    "        info_gain = compute_information_gain(x,y,node_indices,feature)\n",
-    "        if info_gain > max_info_gain:\n",
-    "            max_info_gain = info_gain\n",
+    "        gini_gain = compute_gini_gain(x,y,node_indices,feature)\n",
+    "        if gini_gain > max_gini_gain:\n",
+    "            max_gini_gain = gini_gain\n",
     "            best_feature = feature\n",
     "    return best_feature\n",
     "\n",
-    "def build_tree(x,y,node_indices,current_depth,max_depth):\n",
-    "    entropy = compute_entropy(y[node_indices])\n",
-    "    value = np.bincount(y[node_indices],minlength=2)\n",
-    "    node = TreeNode(entropy=entropy,value=value,sample=len(node_indices)) \n",
-    "    if current_depth == max_depth or entropy == 0 or len(np.unique(y[node_indices])) == 1:\n",
+    "def built_tree(x,y,node_indices,current_depth,max_depth): \n",
+    "    gini = compute_gini(y[node_indices])\n",
+    "    values = np.bincount(y[node_indices],minlength=2)\n",
+    "    node = TreeNode(gini=gini,samples=len(node_indices),value=values)\n",
+    "    if current_depth == max_depth or gini == 0 or len(np.unique(y[node_indices])) == 1:\n",
     "        return node \n",
     "    best_feature = get_best_split(x,y,node_indices)\n",
     "    if best_feature is None:\n",
-    "        return node \n",
-    "    node.feature = best_feature\n",
+    "        return node\n",
+    "    node.feature  = best_feature \n",
     "    left_indices,right_indices = split_dataset(x,node_indices,best_feature)\n",
     "    if left_indices:\n",
-    "        node.left = build_tree(x,y,left_indices,current_depth+1,max_depth)\n",
+    "        node.left = built_tree(x,y,left_indices,current_depth + 1,max_depth)\n",
     "    if right_indices:\n",
-    "        node.right = build_tree(x,y,right_indices,current_depth+1,max_depth)\n",
-    "    return node\n",
+    "        node.right = built_tree(x,y,right_indices,current_depth+1,max_depth)\n",
+    "    return node \n",
     "\n",
     "def print_tree(node,feature_names=None,depth=0):\n",
     "    if feature_names is not None and node.feature is not None:\n",
@@ -342,40 +520,32 @@
     "    else:\n",
     "        feature_name = f'Feature {node.feature}'\n",
     "    if node.is_leaf():\n",
-    "        print(f\"{' '*depth}Leaf node, Class Distrubution:{node.value}\")\n",
+    "        print(f\"{' '*depth}Leaf node Class Distrubution:{node.value}\")  \n",
     "    else:\n",
-    "        print(f\"{' '*depth}{feature_name} (entropy = {node.entropy}) (samples = {node.sample})\")\n",
-    "    if node.left:\n",
-    "        print(f\"{' '*depth}Left\")\n",
+    "        print(f\"{' '*depth}{feature_name} (gini = {node.gini:.3f}) (samples = {node.samples})\")\n",
+    "    if node.left is not None:\n",
+    "        print(f\"{' '*depth}Left:\")\n",
     "        print_tree(node.left,feature_names=feature_names,depth=depth+1)\n",
-    "    if node.right:\n",
-    "        print(f\"{' '*depth}Right\")\n",
+    "    if node.right is not None:\n",
+    "        print(f\"{' '*depth}Right:\")\n",
     "        print_tree(node.right,feature_names=feature_names,depth=depth+1)\n",
     "\n",
-    "\n",
-    "def predict(node,sample):\n",
+    "def predict(node,sample_input):\n",
     "    while not node.is_leaf():\n",
     "        feature_index = node.feature\n",
-    "        if sample[feature_index] == 1:\n",
+    "        if sample_input[feature_index] == 1:\n",
     "            node = node.right\n",
     "        else:\n",
     "            node = node.left\n",
     "    return np.argmax(node.value)\n",
     "\n",
-    "root = build_tree(x,y,list(range(len(y))),0,6)\n",
+    "node = built_tree(x,y,node_indices=list(range(len(y))),current_depth=0,max_depth=6)\n",
     "feature_names = df.drop('Decision',axis=1).columns.to_list()\n",
-    "print_tree(root,feature_names=feature_names,depth=0)\n",
-    "sample_input = [1, 0, 1, 0, 1, 0]\n",
-    "y_pred = predict(root,sample_input)\n",
-    "print(f\"Predicted class for input {sample_input}: {y_pred}\")"
+    "print_tree(node,feature_names=feature_names,depth=0)\n",
+    "sample_input = [0, 1, 0, 0, 1, 0, 1, 0] \n",
+    "y_pred = predict(node,sample_input)\n",
+    "print(f\"The predict class for sample input {sample_input}:{y_pred}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
